[package]
name = "keystone"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "auth"
path = "src/main.rs"

[dependencies]
base64 = "0.21"
bls = { package = "blsttc", version = "8.0.1" }
blst = "0.3.13"
bytes = { version = "1.10.1", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive"]  }
dashmap = "6.1.0"
ecdsa = { version = "0.16.9", features = ["verifying"] }
hex = "~0.4.3"
k256 = { version = "0.13.4", features = ["ecdsa", "sha256"] }
rmp-serde = "1.1.1"
sha2 = "0.10.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.23"
tiny-keccak = { version = "2.0.2", features = [ "keccak" ] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "time", "net", "io-util"] }
tokio-util = "0.7.14"

[dev-dependencies]
tempfile = "3.20.0"
once_cell = "1.19"
assert_cmd = "2.0.17"
predicates = "3.1.3"
rand = "0.8"
